ref: RemoveMember slice
